fix spacing bug for unlock button tooltip

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -4207,6 +4207,7 @@ a.website_profile_button:hover {
   margin-right: 0px;
   padding: 27px 20px 20px;
   display: none;
+  right: 60px;
 }
 
 .unlock_specialty_wrapper:hover .unlock_specialty_tooltip {
